Snav: Search current container first, even if it can't scroll any further

This adds a new helper IsContainer() that we can use to find
ScrollableEnclosingBoxOrParentFrameForNode().

This CL renames and changes the semantics of
ScrollableEnclosingBoxOrParentFrameForNodeInDirection() into
ScrollableEnclosingBoxOrParentFrameForNode(). Now it will
return the focusable's current container C, even if C can't
scroll any further in one of the directions.

In other words, we do not need the direction to determine
a node's container. This is simplification but it also
is needed to fix bug 770103.

Bug: 770103
Change-Id: I439d532631e9d424e40e801873ef330cd15ffe7f