third_party/WebKit/Source/core/page/SpatialNavigation.h
@@ -132,6 +132,8 @@ bool HasOffscreenRect(Node*, WebFocusType = kWebFocusTypeNone);
 bool ScrollInDirection(LocalFrame*, WebFocusType);
 bool ScrollInDirection(Node* container, WebFocusType);
 bool IsNavigableContainer(const Node*, WebFocusType);
+bool IsContainer(const Node*);
+bool CanScroll(const Node* container);
 bool CanScrollInDirection(const Node* container, WebFocusType);
 bool CanScrollInDirection(const LocalFrame*, WebFocusType);
 bool CanBeScrolledIntoView(WebFocusType, const FocusCandidate&);
@@ -140,9 +142,7 @@ bool AreElementsOnSameLine(const FocusCandidate& first_candidate,
 void DistanceDataForNode(WebFocusType,
                          const FocusCandidate& current,
                          FocusCandidate&);
-CORE_EXPORT Node* ScrollableEnclosingBoxOrParentFrameForNodeInDirection(
-    WebFocusType,
-    Node*);
+CORE_EXPORT Node* ScrollableEnclosingBoxOrParentFrameForNode(Node*);
 LayoutRect NodeRectInAbsoluteCoordinates(Node*, bool ignore_border = false);
 LayoutRect FrameRectInAbsoluteCoordinates(LocalFrame*);
 LayoutRect VirtualRectForDirection(WebFocusType,
